make README.md in root

--- a/dist.ini
+++ b/dist.ini
@@ -24,7 +24,8 @@ repository.type = git
 [PodWeaver]
 [PkgVersion]
 [NextRelease]
-;[ReadmeMarkdownFromPod]
+[ReadmeAnyFromPod / MarkdownInRoot]
+filename = README.md
 [InstallGuide]
 
 [Prereqs / RuntimeRequires]
